--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 Flask==1.1.1
 gunicorn==19.9.0
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.10
 MarkupSafe==1.1.1
-Werkzeug==0.15.5
-numpy>= 1.11.0
-scipy>=0.15.1
-scikit-learn>=0.22.1
-matplotlib>=1.4.3
-pandas>=0.19
+Werkzeug==0.14.5
+numpy== 1.18.1
+scipy==1.4.1
+scikit-learn==0.22.1
+pandas>=1.0.1
 
